--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,5 +15,5 @@ jobs:
       - run: pip install -r requirements.txt
       - name: Lancer l'agent
         env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: python main.py
